tests/lean/t14.lean.expected.out
b : A
y : A
t14.lean:12:8: error: unknown identifier 'c'
a : foo.A
x : foo.A
t14.lean:19:8: error: unknown identifier 'c'
t14.lean:23:26: error: invalid 'open/export' command option, mixing explicit and implicit 'open/export' options
a : A
c : A
A : Type
a * c : A
foo.a * foo.c : foo.A
t14.lean:46:8: error: unknown identifier 'a'
f a c : A
t14.lean:52:9: error: unexpected token
